--- a/stewardship-form.css
+++ b/stewardship-form.css
@@ -11,7 +11,7 @@
     margin-bottom: 0;
 }
 
-p, li {
+.entry-content p, li {
     font-family: "Corbel", Actor, sans-serif;
     line-height: 1.4em;
     color: #04294b;
