Troubleshooting entry-content

--- a/stewardship-form.css
+++ b/stewardship-form.css
@@ -11,8 +11,14 @@
     margin-bottom: 0;
 }
 
-.entry-content p, li {
-    font-family: "Corbel", Actor, sans-serif;
+.entry-content p {
+    font-family: Corbel, Actor, sans-serif;
+    line-height: 1.4em;
+    color: #04294b;
+}
+
+.entry-content li {
+    font-family: Corbel, Actor, sans-serif;
     line-height: 1.4em;
     color: #04294b;
 }
@@ -116,7 +122,7 @@
 /* FORM */
 #choice_14_36_3, #choice_14_11_1 { /* Fixes a couple misaligned checkboxes */
     vertical-align: top;
-    margin-top: 0.33em;
+    margin-top: 0.25em;
 }
 
 #gform_wrapper_14 h2, h3, h4 {
