--- a/stewardship-form.css
+++ b/stewardship-form.css
@@ -137,10 +137,16 @@ legend, label {
 
 
 @media screen and (max-width: 64em) { /*Tablet*/
-
+    stewardshipHeader h2 {
+        font-size: 5vw;
+    }
 }
 
 @media screen and (max-width: 37.5em) { /*Mobile*/
+    .stewardshipHeader h2 {
+        font-size: 6vw;
+    }
+    
     .stewardshipExpectations {
         display: block;
     }
