--- a/global.css
+++ b/global.css
@@ -726,6 +726,7 @@ Footer Design - Customify Theme
 .customify-col-2_md-2_sm-6_xs-12.builder-item.builder-first--footer-2, 
 .customify-col-2_md-2_sm-6_xs-12.builder-item.builder-first--footer-1 {
     min-width: 300px;
+    margin: 2em 0 0 0;
 }
 
 
