Hide Nav Links on posts

--- a/global.css
+++ b/global.css
@@ -299,6 +299,12 @@ iframe {
   
 
 /*--------------------------------------------------------------
+  Blog Post Stylings
+--------------------------------------------------------------*/
+.nav-links {
+    display: none; /*hides the navigation to next post at bottom*/	
+}
+/*--------------------------------------------------------------
   Blog Post Video Stylings
 --------------------------------------------------------------*/
 .blogvidwrapper {
