Updating nav link hiding

--- a/global.css
+++ b/global.css
@@ -301,9 +301,11 @@ iframe {
 /*--------------------------------------------------------------
   Blog Post Stylings
 --------------------------------------------------------------*/
-.nav-links {
+.entry-post-navigation.entry--item {
     display: none; /*hides the navigation to next post at bottom*/	
 }
+
+
 /*--------------------------------------------------------------
   Blog Post Video Stylings
 --------------------------------------------------------------*/
