--- a/global.css
+++ b/global.css
@@ -302,8 +302,8 @@ iframe {
   Blog Post Stylings
 --------------------------------------------------------------*/
 .entry-post-navigation.entry--item {
-    display: none; /*hides the navigation to next post at bottom*/	
-}
+    display: none;	
+} /*hides the navigation to next post at bottom in Customify theme*/
 
 
 /*--------------------------------------------------------------
