Corrected parse error line 762

--- a/global.css
+++ b/global.css
@@ -759,7 +759,7 @@ Footer Design - Customify Theme
     }
   
   #homeBookmarks {
-      margin: 1em; .1em;
+      margin: 1em .1em;
       padding: 1em;
   }
   
