Changing style of Home Boxes

--- a/global.css
+++ b/global.css
@@ -1,36 +1,4 @@
 /*--------------------------------------------------------------
- Customify Theme Adjustments - Homepage
---------------------------------------------------------------*/
-
-.page-id-20 {
-    #page-titlebar {
-        display: none;
-    }
-
-    #main {
-        padding-top: 0;
-    }
-
-    .customify-container {
-        margin: 0; padding: 0;
-        width: 100%; max-width: 100%;
-    }
-
-    .row-v2.row-v2-main.no-center {
-        padding: 0 2em;
-    }
-
-    #main {
-        width: 100%; max-width: 100%;
-        padding: 0; margin: 0;
-    }
-
-    .entry-content {
-        width: 100%; max-width: 100%;
-        padding: 0; Margin: 0;
-    }
-}
-/*--------------------------------------------------------------
  YouTube Responsive Video Styling on Wide Pages
 --------------------------------------------------------------*/
 .vidwrapper {
@@ -205,8 +173,9 @@ iframe {
         }
 
         .homeBox {
-            background-color: #04294b;
-            color: #fff;
+            /*background-color: #04294b;*/
+	    border: 3px solid #04294b;
+            color: #3f3f3f; /*#fff;*/
             text-align: center;
             padding: .7em;
             width: 320px;
