--- a/global.css
+++ b/global.css
@@ -173,9 +173,8 @@ iframe {
         }
 
         .homeBox {
-            /*background-color: #04294b;*/
-	    border: 3px solid #04294b;
-            color: #3f3f3f; /*#fff;*/
+            background-color: #04294b;
+            color: #fff;
             text-align: center;
             padding: .7em;
             width: 320px;
