--- a/global.css
+++ b/global.css
@@ -63,7 +63,7 @@ iframe {
 }
 
 #homeStreaming {
-     margin: 0;
+     margin: 1% 0 0 0;
      padding: 1em;
      border-radius: 1.5em;
      background-color: #04294b;
